# 1l.is

./: .editorconfig  .gitattributes  .gitignore  README.md  app.py  flake.nix  quart-db.nix  seeder.sql  setup.cfg
onelink/: __main__.py
src/onelink/: __main__.py  base36.py  database.py
src/onelink/templates/: base.jinja2  index.jinja2
