[metadata]
name = onelink
version = 0.0.1
author = Sigmanificient
description = URL Shortener
long_description = file: README.md
long_description_content_type = text/markdown
platform = unix, linux

[options]
packages =
    onelink
install_requires =
    Flask==2.2.5
python_requires = >=3.8
zip_safe = no

[options.entry_points]
console_scripts =
    onelink = onelink.__main__:main
